--- a/templates/index.html
+++ b/templates/index.html
@@ -6,71 +6,68 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Mission to Mars</title>
     <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    />
+      rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <body>
     <div class="container">
       <!-- Add Jumbotron to Header -->
-      <div class="jumbotron text-center">
+      <div class="jumbotron text-center" style="color: maroon; fill: slategrey;">
         <h1>Mission to Mars</h1>
         <!-- Add a button to activate scraping script -->
-        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+        <p><a class="btn btn-default btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
       </div>
-
       <!-- Add section for Mars News -->
       <div class="row" id="mars-news">
         <div class="col-md-12">
-          <div class="media">
-            <div class="media-body">
+          <div class="media text-center">
+            <div class="media-body" style="color: maroon;">
               <h2>Latest Mars News</h2>
-              <h4 class="media-heading">{{ mars.news_title }}</h4>
+              <h4 class="media-heading" style="color: black;">{{ mars.news_title }}</h4>
               <p>{{ mars.news_paragraph }}</p>
             </div>
           </div>
         </div>
       </div>
-
       <!-- Section for Featured Image and Facts table -->
       <div class="row" id="mars-featured-image">
-        <div class="col-md-8">
+        <div class="col-md-8" style="color: maroon;">
           <h2>Featured Mars Image</h2>
-
-          <!-- if images is False/None/non-existent, then default to error message -->
           <img
-            src="{{mars.featured_image | default('static/images/error.png', true) }}"
+            src="{{mars.featured_image }}"
             class="img-responsive"
-            alt="Responsive image"
-          />
+            alt="Responsive image">
+          </img>
         </div>
-
         <div class="col-md-4">
           <!-- Mars Facts -->
-          <div class="row" id="mars-facts">
+          <div class="row" id="mars-facts" style="color: maroon;">
             <h4>Mars Facts</h4>
             {{ mars.facts | safe }}
           </div>
         </div>
       </div>
-
-      <!-- Section for Mars Hemispheres -->
-      <div class="row" id="mars-hemispheres">
-        <div class="page-header">
-          <h2 class="text-center">Mars Hemispheres</h2>
+      <!-- Section for Hemisphere Title and Image -->
+      <div class="row" id="hemisphere">
+        <div class="col-md-8" style="color: maroon;">
+          <h2>Mars Hemisphere</h2>
         </div>
-
-        {% for hemisphere in mars.hemispheres %}
-        <div class="col-md-6">
-          <div class="thumbnail">
-            <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...">
-            <div class="caption">
-              <h3>{{hemisphere.title}}</h3>
+        <div>
+          {% for item in mars.mars_hemispheres %} 
+          <div class=".col-xs-6 .col-sm-4">
+            <div class="card text-center">
+              <img 
+                src="{{ item.img_url }}" 
+                class="img-circle"
+                width="500" height="500"/>
+              </img>
+              <div class="card-body">
+                <h4 class="card-title">{{item.title}}</h4>
+              </div>
             </div>
           </div>
         </div>
-        {% endfor %}
       </div>
-    </div>
-  </body>
+      {% endfor %}
+    <div>
+  </body>   
 </html>
